--- a/mta.yaml
+++ b/mta.yaml
@@ -1,34 +1,46 @@
 ID: FinalXSAMTAProject
 _schema-version: '2.1'
 version: 0.0.1
-
 modules:
- - name: db
-   type: hdb
-   path: db
-   requires:
-    - name: hdi_db
-      properties:
-        TARGET_CONTAINER: ~{hdi-container-name}
-
-    - name: cross-container-service-1
-      group: SERVICE_REPLACEMENTS
-
-      properties:
-        key: ServiceName_1
-        service: ~{the-service-name}
-                          
-
+  - name: db
+    type: hdb
+    path: db
+    requires:
+      - name: hdi_db
+        properties:
+          TARGET_CONTAINER: '~{hdi-container-name}'
+      - name: cross-container-service-1
+        group: SERVICE_REPLACEMENTS
+        properties:
+          key: ServiceName_1
+          service: '~{the-service-name}'
+  - name: xsjs_odata
+    type: nodejs
+    path: xsjs_odata
+    provides:
+      - name: xsjs_odata_api
+        properties:
+          url: '${default-url}'
+    requires:
+      - name: hdi_db
+  - name: ui5_front
+    type: html5
+    path: ui5_front
+    requires:
+      - name: xsjs_odata_api
+        group: destinations
+        properties:
+          name: xsjs-be
+          url: '~{url}'
+          forwardAuthToken: true
 resources:
- - name: hdi_db
-   properties:
-      hdi-container-name: ${service-name}
-   type: com.sap.xs.hdi-container
-
- - name: cross-container-service-1
-   parameters:
+  - name: hdi_db
+    properties:
+      hdi-container-name: '${service-name}'
+    type: com.sap.xs.hdi-container
+  - name: cross-container-service-1
+    parameters:
       service-name: SFLIGHT
-   properties:
-      the-service-name: ${service-name}
-   type: org.cloudfoundry.existing-service
-
+    properties:
+      the-service-name: '${service-name}'
+    type: org.cloudfoundry.existing-service
