--- a/mta.yaml
+++ b/mta.yaml
@@ -27,7 +27,7 @@ resources:
 
  - name: cross-container-service-1
    parameters:
-      service-name: SFLIGHT
+      service-name: SFLIGHTDEMO
    properties:
       the-service-name: ${service-name}
    type: org.cloudfoundry.existing-service
