--- a/mta.yaml
+++ b/mta.yaml
@@ -1,6 +1,6 @@
 ID: FinalXSAMTAProject
 _schema-version: '2.1'
-version: 0.0.1
+version: 0.0.2
 
 modules:
  - name: db
@@ -27,7 +27,7 @@ resources:
 
  - name: cross-container-service-1
    parameters:
-      service-name: SFLIGHTDEMO
+      service-name: DBSDEMO
    properties:
       the-service-name: ${service-name}
    type: org.cloudfoundry.existing-service
